--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
     "preview": "vite preview"
   },
   "author": {
-    "id":"1",
+    "id": "1",
     "name": "txf",
     "email": "sandytaogo@163.com"
   },
   "contributors": [
     {
-      "id":"1-1",
-      "name":"sandytao",
-      "email" : "sandytaogo@163.com",
-      "url" : "https://github.com/sandytaogo"
+      "id": "1-1",
+      "name": "sandytao",
+      "email": "sandytaogo@163.com",
+      "url": "https://github.com/sandytaogo"
     }
   ],
   "dependencies": {
@@ -47,6 +47,7 @@
     "min-dom": "^4.1.0",
     "naive-ui": "^2.34.4",
     "pinia": "2.1.4",
+    "sm-crypto": "^0.3.13",
     "tiny-svg": "^3.0.1",
     "vue": "^3.3.4",
     "vue-i18n": "^9.2.2"
@@ -63,6 +64,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.11.0",
     "prettier": "^2.8.8",
+    "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.62.1",
     "sass-loader": "^13.2.2",
     "typescript": "^5.0.4",
